k8s/base/worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: towfiqueahmmed/worker_app_project2:worker-v3
        - name: REDIS_HOST
          value: "redis"
        - name: REDIS_PORT_OVERRIDE
          value: "6379"
        - name: DB_HOST
          value: "postgres"
        - name: DB_USERNAME
          value: "postgres"
        - name: DB_PASSWORD
          value: "postgres"
        - name: DB_NAME
          value: "postgres"
