k8s/base/result.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
  namespace: voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
        - name: result
          image: towfiqueahmmed/result_app_project2:result-v2
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: result-service
spec:
  selector:
    app: result
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
