k8s/base/vote.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
  namespace: voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
        - name: vote
          image: towfiqueahmmed/voting_app_project2:v3
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: vote
  namespace: voting-app
spec:
  type: LoadBalancer
  selector:
    app: vote
  ports:
    - port: 80
      targetPort: 80
